@@ -1,3 +1,10 @@
+  * prot.c, prot.h, chkshsgr.c, tryshsgr.c, hasshsgr.h?, warn-shsgr:
+    remove; obsolete.
+  * Makefile, TARGETS: no longer check for "shortsetgroups" (thx Leah
+    Neukirchen).
+  * socklog.c: replace prot_gid() with setgroups() and prot_uid() with
+    setuid().
+
 socklog 2.1.0
 Mon, 06 Mar 2006 12:59:33 +0000
   * socklog-conf, man/socklog-conf.8: create service directories
